--- a/index.html
+++ b/index.html
@@ -7,78 +7,33 @@
 	<meta name="viewport" content="width=device-width, initial- scale=1">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
+	<style type="text/css">
+		/* For debugging */
+	</style>
+
 </head>
 
 <body>
 
-	<h1>Register</h1>
+	<div>
+		<h1>Home</h1>
 
-	<form action="" method="">
+		<p>
+			Lorem ipsum dolor amet etsy shaman kitsch cardigan kale chips williamsburg ennui cloud bread. Iceland ugh skateboard, plaid activated charcoal selfies mustache single-origin coffee pork belly chicharrones flannel 8-bit. Health goth direct trade edison bulb gastropub 90's. Ramps small batch affogato, kinfolk dreamcatcher coloring book cloud bread helvetica live-edge.
+		</p>
 
-		<div>
-			<label for="first_name">First Name:</label>
-			<input type="text" id="first_name" placeholder="John" required>
+		<p>
+			Venmo hella butcher distillery, dreamcatcher iceland ramps vinyl viral mixtape skateboard. Slow-carb live-edge ugh lo-fi four dollar toast polaroid flannel ethical put a bird on it squid copper mug. Woke taiyaki asymmetrical forage raclette health goth live-edge banjo. Retro unicorn kickstarter yuccie. Brunch pinterest stumptown, fixie pork belly copper mug four loko. Messenger bag pork belly organic artisan cray chicharrones. Shaman hella affogato before they sold out iPhone bespoke.
+		</p>
 
-			<label for="last_name">Last Name:</label>
-			<input type="text" id="last_name" placeholder="Smith" required>
-		</div>
+		<p>
+			Pour-over tbh try-hard ramps man bun drinking vinegar typewriter tumeric austin tilde truffaut disrupt. Shabby chic kitsch post-ironic tattooed, 90's chillwave pour-over sriracha fixie banjo mustache. Thundercats cardigan gluten-free sustainable aesthetic, etsy squid af meditation snackwave migas single-origin coffee pork belly kogi. Cronut pickled mustache paleo listicle mumblecore.
+		</p>
 
-		<div>
-			<label for="gender"></label>
-			<label for="male">Male</label>
-			<input type="radio" name="gender" id="male" value="M">
-
-			<label for="female">Female</label>
-			<input type="radio" name="gender" id="female" value="F">
-
-			<label for="other">Other</label>
-			<input type="radio" name="gender" id="other" value="O">
-		</div>
-
-		<div>
-			<label for="email">Email:</label>
-			<input id="email" name="email" type="email" placeholder="your email" required>
-
-			<label for="password">Password:</label>
-			<input id="password" name="password" type="password" placeholder="your password" minlength="5" maxlength="10" required>
-		</div>
-
-		<div>
-			<select name="month" id="">
-				<option value="">Month</option>
-				<option value="JAN">JAN</option>
-				<option value="FEB">FEB</option>
-				<option value="MAR">MAR</option>
-				<option value="APR">APR</option>
-				<option value="MAY">MAY</option>
-				<option value="JUN">JUN</option>
-				<option value="JUL">JUL</option>
-				<option value="AUG">AUG</option>
-				<option value="SEP">SEP</option>
-				<option value="OCT">OCT</option>
-				<option value="NOV">NOV</option>
-				<option value="DEC">DEC</option>
-			</select>
-
-			<select name="day" id="">
-				<option value="">Day</option>
-				<option value="1">1</option>
-			</select>
-
-			<select name="year" id="">
-				<option value="">Year</option>
-				<option value="1990">1990</option>
-			</select>
-		</div>
-
-		<div>
-			<label for="terms">I agree to the terms and conditions</label>
-			<input type="checkbox" name="" id="terms">
-		</div>
-
-		<input type="submit">
-
-	</form>
+		<p>
+			Small batch tacos salvia ethical bitters umami health goth leggings subway tile godard letterpress. Pok pok selfies man braid try-hard YOLO. Hella kinfolk vice umami YOLO green juice franzen iceland small batch readymade. Cornhole meggings franzen, wolf kinfolk gochujang meditation umami. Pickled succulents chia, kickstarter vinyl hammock mumblecore leggings tilde drinking vinegar street art thundercats photo booth.
+		</p>
+	</div>
 
 	<script src="js/script.js"></script>
 
