--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,42 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <title>Bootstrap</title>
 </head>
-<body>
-    <h1>Bootstrap Basics</h1>
 
-    <button class="btn btn-success">JACKPOT</button>
+<body>
+
+    <div class="navbar navbar-default"></div>
+
+    <div class="container">
+        <h1>Sign up</h1>
+        <form>
+
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputFile">File input</label>
+                <input type="file" id="exampleInputFile">
+                <p class="help-block">Example block-level help text here.</p>
+            </div>
+
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> Check me out
+                </label>
+            </div>
+
+            <button type="submit" class="btn btn-default">Submit</button>
+
+        </form>
+    </div>
+
 </body>
+
 </html>
