--- a/bootstrap/image_gallery.html
+++ b/bootstrap/image_gallery.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+
+    
+
+    <!-- Debug styles -->
+    <style>
+        .pic {
+            background-color: lightskyblue;
+            border: 1px solid hotpink; 
+        }
+    </style>
 
     <title>Image Gallery</title>
 </head>
@@ -54,8 +66,9 @@
     <div class="container">
         <!-- Jumbotron -->
         <div class="jumbotron">
-            <h1>RagingRice Adventures</h1>
+            <h1><i class="fas fa-poo"></i> RagingRice Adventures</h1>
             <p>
+                
                 Journey far and wide to the farthest reaches of the planet...
             </p>
             <p>
@@ -64,21 +77,21 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-4 col-md-12 col-sm-12 debug">A</div>
-            <div class="col-lg-4 col-md-12 col-sm-12 debug">B</div>
-            <div class="col-lg-4 col-md-12 col-sm-12 debug">C</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 pic">A</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 pic">B</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 pic">C</div>
         </div>
 
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 debug">A</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 debug">B</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 debug">C</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 pic">A</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 pic">B</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 pic">C</div>
         </div>
 
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 debug">A</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 debug">B</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 debug">C</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 pic">A</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 pic">B</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 pic">C</div>
         </div>
     </div>
 
