--- a/bootstrap/image_gallery.html
+++ b/bootstrap/image_gallery.html
@@ -7,12 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
 
-    
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <!-- Debug styles -->
     <style>
@@ -26,7 +27,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
@@ -42,15 +43,22 @@
         <ul class="nav navbar-nav">
             <li class="active">
                 <a href="#">
-                    <span class="glyphicon glyphicon-home"> </span>
+                    <span class="glyphicon glyphicon-home"></span>
                     Home
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <span class="glyphicon glyphicon-user"> </span>
+                    <span class="glyphicon glyphicon-user"></span>
                     About Me
+                </a>
+            </li>
+
+            <li>
+                <a href="#">
+                    <span class="glyphicon glyphicon-envelope"></span>
+                    Contact
                 </a>
             </li>
         </ul>
@@ -66,9 +74,8 @@
     <div class="container">
         <!-- Jumbotron -->
         <div class="jumbotron">
-            <h1><i class="fas fa-poo"></i> RagingRice Adventures</h1>
+            <h1><i class="fas fa-poo"></i>RagingRice Adventures</h1>
             <p>
-                
                 Journey far and wide to the farthest reaches of the planet...
             </p>
             <p>
@@ -77,21 +84,57 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 pic">A</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 pic">B</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 pic">C</div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img src="https://i.imgur.com/OZfVm7l.png" alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img src="https://i.imgur.com/1Iz5XD2.png" alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img src="https://i.imgur.com/F6jUcuh.png" alt="">
+                </div>
+            </div>
         </div>
 
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 pic">A</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 pic">B</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 pic">C</div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img src="https://i.imgur.com/kf0BWAh.png" alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img src="https://i.imgur.com/xheleUJ.png" alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img src="https://i.imgur.com/Rfrd388.png" alt="">
+                </div>
+            </div>
         </div>
 
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 pic">A</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 pic">B</div>
-            <div class="col-lg-4 col-md-6 col-sm-12 pic">C</div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img src="https://i.imgur.com/cMKVl6k.png" alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img src="https://i.imgur.com/hvdmVD0.png" alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="thumbnail">
+                    <img src="https://i.imgur.com/g4vyRii.png" alt="">
+                </div>
+            </div>
         </div>
     </div>
 
