--- a/bootstrap/image_gallery.html
+++ b/bootstrap/image_gallery.html
@@ -41,7 +41,7 @@
         </div>
 
         <ul class="nav navbar-nav">
-            <li class="active">
+            <li>
                 <a href="#">
                     <span class="glyphicon glyphicon-home"></span>
                     Home
@@ -63,12 +63,28 @@
             </li>
         </ul>
 
-        <form class="navbar-form navbar-right">
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a href="#">
+                    <span class="glyphicon glyphicon-home"></span>
+                    Sign Up
+                    <span class="sr-only">(current)</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="glyphicon glyphicon-user"></span>
+                    Login
+                </a>
+            </li>
+        </ul>
+
+        <!-- <form class="navbar-form navbar-right">
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="Search">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        </form> -->
     </nav>
     <!-- Main Container -->
     <div class="container">
