--- a/jquery/index.html
+++ b/jquery/index.html
@@ -5,13 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My To Do List</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 </head>
 
 <body>
 
+    <div id="banner">
+        <h1> Shopping List </h1>
+        <button> Buy that shit </button>
+
+        <ol>
+            <div class="item">
+                  
+            </div>
+        </ol>
+
+
+    </div>
+
+    <script type="text/javascript" src="scripts.js"></script>
 </body>
 
 </html>
