--- a/jquery/index.html
+++ b/jquery/index.html
@@ -21,10 +21,20 @@
 
         <ol>
             <div class="item">
-                  
+
             </div>
         </ol>
 
+        <select id="single">
+            <option>Single</option>
+            <option>Single2</option>
+        </select>
+
+        <select id="multiple" multiple="multiple">
+            <option selected="selected">Multiple</option>
+            <option>Multiple2</option>
+            <option selected="selected">Multiple3</option>
+        </select>
 
     </div>
 
