--- a/jquery/index.html
+++ b/jquery/index.html
@@ -24,13 +24,13 @@
 
         <ul id="list">
             <li>
-                <span></span>
+                <span>X</span>
                 <input type="checkbox">
                 Gucci Wallet
             </li>
-            <li><input type="checkbox">Gucci Shirt</li>
-            <li><input type="checkbox">Supreme Hoodie</li>
-            <li><input type="checkbox">Jordan 1's</li>
+            <li><span>X</span><input type="checkbox">Gucci Shirt</li>
+            <li><span>X</span><input type="checkbox">Supreme Hoodie</li>
+            <li><span>X</span><input type="checkbox">Jordan 1's</li>
         </ul>
     </div>
 
