--- a/jquery/index.html
+++ b/jquery/index.html
@@ -18,19 +18,15 @@
 
     <div id="container">
         <h1> Shopping List </h1>
-        <input type="text" id="item" placeholder="What do you want to buy?">
+        <input type="text" id="item" placeholder="Add new item">
 
         <button id="btn"> Buy that shit </button>
 
         <ul id="list">
-            <li>
-                <span>X</span>
-                <input type="checkbox">
-                Gucci Wallet
-            </li>
-            <li><span>X</span><input type="checkbox">Gucci Shirt</li>
-            <li><span>X</span><input type="checkbox">Supreme Hoodie</li>
-            <li><span>X</span><input type="checkbox">Jordan 1's</li>
+            <li><span>X</span>Gucci Wallet</li>
+            <li><span>X</span>Gucci Shirt</li>
+            <li><span>X</span>Supreme Hoodie</li>
+            <li><span>X</span>Jordan 1's</li>
         </ul>
     </div>
 
