--- a/jquery/index.html
+++ b/jquery/index.html
@@ -9,12 +9,13 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
 </head>
 
 <body>
-    <button id="textBtn"> Add More </button>
 
     <div id="container">
         <h1> Shopping List </h1>
@@ -23,10 +24,10 @@
         <button id="btn"> Buy that shit </button>
 
         <ul id="list">
-            <li><span>X</span>Gucci Wallet</li>
-            <li><span>X</span>Gucci Shirt</li>
-            <li><span>X</span>Supreme Hoodie</li>
-            <li><span>X</span>Jordan 1's</li>
+            <li><span><i class="fas fa-bomb"></i></span>Gucci Wallet</li>
+            <li><span><i class="fas fa-bomb"></i></span>Gucci Shirt</li>
+            <li><span><i class="fas fa-bomb"></i></span>Supreme Hoodie</li>
+            <li><span><i class="fas fa-bomb"></i></span>Jordan 1's</li>
         </ul>
     </div>
 
